# detroit-automation-academy-public

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ABOUT_ME.md  ACTION_DIRECTIVE_CACHE_AND_AUDIT.md  AGENT_EXECUTION_DASHBOARD.md  AT_INFRASTRUCTURE_LAUNCH.md  BGC_EVENT_STATUS_DASHBOARD.html  BGC_EVENT_STATUS_DASHBOARD_README.md  BRAND_GUIDELINES.md  CALENDAR_SHARING_PROCEDURE.md  CLEANUP.md  CLEANUP_CHECKLIST.md  CMO_AUTONOMOUS_AGENT_CHARTER.md  CMO_STRATEGY_DASHBOARD.md  CMO_STRATEGY_KPI_FRAMEWORK.md  CNAME  COMPLIANCE.md  CTO_AUTONOMOUS_AGENT_CHARTER.md  CTO_DEPLOYMENT_BRIEFING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_SUMMARY.md  DNS_CONFIG_QUICK_REFERENCE.md  EDUCATIONAL_PARTNER_LICENSE.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETION_REPORT.md  GATE_1_VERIFICATION_RESULTS.txt  GATE_3_FINAL_CERTIFICATION.md  GATE_3_VERIFICATION_REPORT.txt  GCP_INFRASTRUCTURE.md  GITHUB_PAGES_SETUP.md  GO_LIVE_ACTION_PLAN.md  GO_LIVE_INDEX.md  GO_LIVE_PLAN.md  INDEX.md  LICENSE  MAIL_SERVER_ARCHITECTURE.md  MIGRATION_GUIDE.md  (+42 more)
.github/workflows/: ci.yml  deploy-pages.yml
blog/: 404.html  automated-insights  index.html  index.xml  robots.txt  sitemap.xml  web.config
blog-source/: Dockerfile  hugo.toml  package.json
blog-source/archetypes/: default.md
blog-source/docs/: PRD.md
blog-source/public/: 404.html  index.html  sitemap.xml
blog/about/: index.html
blog/categories/: index.html  index.xml
blog/css/: custom.css
blog/de/: 404.html  index.html  index.xml  sitemap.xml
blog/en/: index.html  sitemap.xml
blog/js/: theme-toggle.js
blog/newsletters/: index.html  index.xml
blog/posts/: index.html  index.xml
blog/ru/: 404.html  index.html  (+2 more)
branding/: palette.css
crm/: deploy.sh  pre-push-audit.sh
curriculum/: robotics-fundamentals.md  robotics-fundamentals_de.md
docs/: COMPLIANCE.md  PRD.md  SETUP.md
mobile-portal/: App.js
plans/: AaaS_GLOBAL_EXPANSION_BRIEFING.md
proposals/: PROPOSAL_DPS_TIER3_AAAS.md  PROPOSAL_NOVI_DISTRICT_TIER2.md  PROPOSAL_TROY_DISTRICT_TIER2.md  PROPOSAL_WAYNE_RESA_TIER3.md
public_website/: CLEANUP.md  CLEANUP_CHECKLIST.md  INDEX.md  PRIVACY_AUDIT_REPORT.md  PROJECT_PLAN.md  api_reference.md  dashboard.html  landing.html  phase1_guide.md  phase2_guide.md  phase3_guide.md  quick_start.md  site_structure.md  students.html  www.html
scripts/: deploy.sh  standardize_headers.py
specs/: AAAS_TIER3_REGIONAL_HUB_TECH_SPEC.md  ACADEMY_INSTRUCTOR_API_SPEC.md
(+1239 files in other folders)
